# wssg-uniform-registration

./: .gitignore  README.md  package.json  pyproject.toml
frontend/: .env.production  index.html  package.json  tsconfig.json  tsconfig.node.json  vite.config.ts
frontend/src/: App.tsx  globals.css  main.tsx
frontend/src/app/: config.ts  layout.tsx  protected-route.tsx  router.tsx
frontend/src/app/home/: page.tsx  page_template.tsx
frontend/src/components/: language-dropdown-switcher.tsx  trans.tsx
frontend/src/components/layout/: logo.tsx  main-footer.tsx  main-header.tsx
frontend/src/components/state/: empty.tsx  error-banner.tsx  full-page-loader.tsx  global-error.tsx  loader.tsx
frontend/src/components/ui/: container.tsx  toast.tsx
frontend/src/context/: auth-provider.tsx  settings-provider.tsx
frontend/src/core/: types.ts
frontend/src/core/locales/: i18n.ts
frontend/src/core/stores/: create-selectors.ts  store.ts
frontend/src/lib/: sentry.ts
frontend/src/lib/format/: error-server-message.ts  format-number.ts  trans-attribute.ts
frontend/src/types/UniformRegistration/: Size.ts  URAssignItemType.ts  UREmployee.ts  UREmployeeType.ts  URItem.ts  UROrder.ts  UROrderItem.ts  (+3 more)
uniform_registration/: hooks.py  modules.txt
uniform_registration/api/: auth.py  item.py  order.py  settings.py  utils.py
uniform_registration/fixture_backup/: ur_employee_type.json
uniform_registration/fixtures/: client_script.json  ur_employee_type.json
uniform_registration/public/css/: uniform_registration.css
uniform_registration/public/frontend/: index.html
(+78 files in other folders)
